kubernetes/examples/service.example.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: ${k8s-namespace}
  name: ${k8s-service-name}
spec:
  selector:
    app: ${k8s-app-name}
  ports:
  - port: 8080
    targetPort: 8080
