kubernetes/examples/ingress.example.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: ${k8s-namespace}
  name: ${k8s-ingress-name}
  annotations:
    cert-manager.io/cluster-issuer: ${k8s-issuer}
spec:
  ingressClassName: ${ingress-class-name}
  tls:
    - hosts:
        - ${dev-url}
      secretName: ${tls-secret}
  rules:
    - host: ${dev-url}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ${k8s-service-name}
                port:
                  number: 80
